--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="0onqrf7peUk12U0TreZoeJ1yEWjsUxBxL5pATbG6jxs" />
     <title>GEOID STUDY CENTRE Alumni Association</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -380,3 +380,4 @@ window.onclick = function(event) {
     </script>
 </body>
 </html>
+
